Added support for riscv64-linux triplet

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,8 @@ if(NOT VCPKG_TARGET_TRIPLET)
         set(VCPKG_TARGET_TRIPLET "x64-osx")
     elseif(DEFINED ENV{ARM64_LINUX})
         set(VCPKG_TARGET_TRIPLET "arm64-linux")
+    elseif(DEFINED ENV{RISCV64_LINUX})
+        set(VCPKG_TARGET_TRIPLET "riscv64-linux")
     else()
         set(VCPKG_TARGET_TRIPLET "x64-linux")
     endif()
